--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
     </div>
 
     <p class="game-explanation">
+      <strong class="important">How to play:</strong>使用方向鍵移動，把一樣的圖片合在一起。
+    </p>
+    <p class="game-explanation">
       <!-- <strong class="important">Note:</strong> -->
-      <strong class="important">How to play:</strong>使用方向件移動，把一樣的圖片合在一起。
     </p>
     <!-- <hr>
     <p>
